cmake_minimum_required(VERSION 3.25)
project(tf_autorestart C)
set(CMAKE_C_STANDARD 17)

add_library(socket_module STATIC
        lib/socket_lib/socket_module.c
        lib/socket_lib/socket_module.h
)

add_library(thread_module STATIC
        lib/thread_lib/thread_module.c
        lib/thread_lib/thread_module.h
)

add_library(utils_module STATIC
        lib/utils_lib/utils_module.c
        lib/utils_lib/utils_module.h
)

include_directories(lib)

# Add the include directories
target_include_directories(socket_module PUBLIC lib/socket_lib)
target_include_directories(thread_module  PUBLIC lib/thread_lib)
target_include_directories(utils_module  PUBLIC lib/utils_lib)

# Create the project_2 executable
add_executable(tf_autorestartd
        src/autorestartd/ar_maind.c
        src/autorestartd/ar_maind.h
        src/autorestartd/ar_mainApp.c
        src/autorestartd/ar_mainApp.h
        src/autorestartd/client_module.c
        src/autorestartd/client_module.h
        src/autorestartd/events_module.c
        src/autorestartd/events_module.h
        src/autorestartd/init_module.c
        src/autorestartd/init_module.h
        src/autorestartd/test_module.c
        src/autorestartd/test_module.h
        src/autorestartd/port_module.c
        src/autorestartd/port_module.h
        src/autorestartd/ping.c
        src/autorestartd/ping.h
)

target_link_libraries(tf_autorestartd  socket_module thread_module utils_module jansson)
INSTALL(TARGETS tf_autorestartd RUNTIME DESTINATION /usr/bin/)

add_executable(tf_autorestart_ctrl
        src/autorestart_ctrl/ar_main_ctrl.c
        src/autorestart_ctrl/parsing_command.c
        src/autorestart_ctrl/parsing_command.h
        src/autorestart_ctrl/client_module.c
        src/autorestart_ctrl/client_module.h
)

target_link_libraries(tf_autorestart_ctrl PRIVATE socket_module thread_module utils_module jansson)

INSTALL(TARGETS tf_autorestart_ctrl RUNTIME DESTINATION /usr/bin/)